# StaticZero

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs
defense/: Cargo.toml
defense-ebpf/: Cargo.toml
defense-ebpf/src/: main.rs
defense/src/: adaptive.rs  bus.rs  config.rs  lib.rs  main.rs  metrics.rs  persistence.rs  security.rs  server.rs
docs/: LAB_SETUP.md  TELECOM_THREAT_MODEL.md  usecase.md
offense/: Cargo.toml
offense-ebpf/: Cargo.toml
offense-ebpf/src/: main.rs  maps.rs  satellite.rs  telecom.rs  telecom_5g.rs  telecom_advanced.rs
offense/src/: main.rs
scripts/: lab_setup.sh
tools/: Cargo.toml
tools/src/: lib.rs  modem_firmware.rs  protocol_correlator.rs  protocol_dissectors.rs  sdr_integration.rs
