[package]
name = "staticzero-defense"
version = "0.1.0"
edition = "2021"
description = "User-space telecom correlation engine for StaticZero defense alerts"

[dependencies]
common = { package = "staticzero-common", path = "../common", default-features = false, features = ["user"] }
anyhow = "1"
aya = "~0.12"
aya-log = "~0.2"
bytes = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
