[package]
name = "staticzero-defense"
version = "0.1.0"
edition = "2021"
description = "User-space telecom correlation engine for StaticZero defense alerts"

[lib]
name = "defense"

[dependencies]
common = { package = "staticzero-common", path = "../common", default-features = false, features = ["user"] }
anyhow = "1"
aya = { version = "~0.12", features = ["async_tokio"] }
aya-log = "~0.2"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
prometheus = "0.13"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
notify = "6"
async-trait = "0.1"
libc = "0.2"
